FIxing form gap and align search form to the right

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -1,3 +1,6 @@
 .jumbotron> form > .btn {
   margin: 15px 0;
 }
+.form-right {
+  text-align: right;
+}
